# LabBench

./: .gitignore  README.md
agent_experiments/: .env.example  Benchmark_V15.docx  README.md  pyproject.toml
agent_experiments/agents/: aiready_claude_code.py  aiready_codex.py  aiready_gemini_cli.py  aiready_hermes.py  aiready_kilo_code.py  aiready_openclaw.py  experiment_plan_export.py  preinstalled_claude_code.py  preinstalled_codex.py  preinstalled_gemini_cli.py  preinstalled_hermes.py  preinstalled_kilo_code.py  preinstalled_openclaw.py  runtime_config_support.py
agent_experiments/environments/: prebuilt_local_docker.py
agent_experiments/experiment/: README.md
agent_experiments/images/base/: Dockerfile
agent_experiments/runtime-configs/: README.md
agent_experiments/scoring/: README.md  aiready_scoring_rubric_en.md
agent_experiments/tools/: aggregate_aiready_scoring.py  build_aiready_analysis_bundle.py  build_aiready_scoring_images.sh  build_harness_images.sh  build_image_matrix.sh  build_layered_final_image.sh  docker_runtime_cleanup.py  formal_env.sh  materialize_env_config.py  output_contract.py  preflight_aiready_run.py  prepare_aiready_experiment.py  prepare_aiready_image_layers.py  prepare_aiready_scoring.py  prepare_image_layers.py  push_local_image_to_harbor_via_crane.sh  render_formal_monitor.py  resolve_formal_task_platform.py  run_formal_matrix_with_progress.sh  run_formal_with_cleanup.sh  run_with_timeout.py  runtime_progress.py  stat_aiready_trials.py  task_inventory.py  validate_built_image.py  validate_experiment_isolation.py
(+17 files in other folders)
